--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
                     const celeb = `<div class='${topPrediction}-animal-celeb pt-2 pb-2'>${classDetail.celeb}</div>`;
                     $('.result-message').html(title + explain + celeb);
                 } else {
-                    $('.result-message').html('<div class="animal-title">알 수 있음</div>');
+                    $('.result-message').html('<div class="animal-title">알 수 있나??</div>');
                 }
 
                 for (let i = 0; i < maxPredictions; i++) {
